Prioridades, Multinivel, Multinivel Feedback